@@ -163,6 +163,8 @@ static struct search_node {
 static struct search_node *node_stack[32];
 static int stack_top;
 
+static int timing_idx_adj = 0;
+
 static const char *session_dir = _PATH_SUDO_IO_LOGDIR;
 
 static const char short_opts[] =  "d:f:hlm:s:V";
@@ -1124,9 +1126,13 @@ parse_timing(buf, decimal, idx, seconds, nbytes)
 
     /* Parse index */
     ul = strtoul(buf, &ep, 10);
-    if (ul > IOFD_MAX)
-	goto bad;
-    *idx = (int)ul;
+    if (ul >= IOFD_TIMING) {
+	if (ul != 6)
+	    goto bad;
+	/* work around a bug in timing files generated by sudo 1.8.7 */
+	timing_idx_adj = 2;
+    }
+    *idx = (int)ul - timing_idx_adj;
     for (cp = ep + 1; isspace((unsigned char) *cp); cp++)
 	continue;
 
