@@ -62,6 +62,10 @@ What's new in Sudo 1.8.8?
  * Root may no longer change its SELinux role without entering
    a password.
 
+ * Fixed a bug introduced in Sudo 1.8.7 where the indexes written
+   to the I/O log timing file are two greater than they should be.
+   Sudoreplay now contains a work-around to parse those files.
+
 What's new in Sudo 1.8.7?
 
  * The non-Unix group plugin is now supported when sudoers data
@@ -109,7 +113,7 @@ What's new in Sudo 1.8.7?
 
  * There is now a standalone sudo.conf manual page.
 
- * Sudo now stores its libexec files in a "sudo" subdirectory instead
+ * Sudo now stores its libexec files in a "sudo" sub-directory instead
    of in libexec itself. For backwards compatibility, if the plugin
    is not found in the default plugin directory, sudo will check
    the parent directory if the default directory ends in "/sudo".
